--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    在接触到自动化平台时，颠覆了对运维的认知！受益于开源，整个项目进展异常迅速，
+                                    在接触到自动化平台时，颠覆了对运维的认知！受益于开源，知识面扩展丰富，整个项目进展非常迅速。
                                 </p>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    因现有文库系统负载较高，访问迟钝，无法满足正常办公，对此重构升级，我在此项目中负责环境 部署。
+                                    因现有文库系统负载较高，访问迟钝，无法满足正常办公，对此重构升级，我在此项目中负责环境部署。
                                 </p>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                 </header>
                                 <div class="item-bd">
                                     <p class="section-content" style="text-indent:2em;">
-                                        部署此项目前未接触过 ELK ，只能边学边部署，花费不少力气，因此对日志分析有了一定了解，并 产生了浓厚兴趣;通过此项目，加深了对 mysql 集群的理解，对个各服务器之间相互衔接有了进一步认识。
+                                        部署此项目前未接触过 ELK ，边学边部署，花费不少力气，也因此对日志分析产生浓厚兴趣；通过此项目，加深了对 mysql 集群的理解，以及各服务之间相互衔接有进一步认识。
                                     </p>
                                 </div>
                             </div>
@@ -328,7 +328,7 @@
                                 <p class="section-content">
                                 </p>
                                 <p class="section-content">
-                                    热爱开源精神，拥抱开源社区，学习新技术、分析源码、记录笔记。
+                                    热爱开源精神，拥抱开源社区，学习新技术、分析源码、记录学习笔记。
                                 </p>
                             </div>
                         <div class="item">
