--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
                                     构建教育系统 docker 镜像；
                                 </li>
                                 <li class="section-content">
-                                    利用 gitlab + jenkins+docker 实现自动化部署；
+                                    利用 gitlab + jenkins + docker 实现自动化部署；
                                 </li>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    在接触到自动化平台时，颠覆了对运维的认知！受益于开源，知识面扩展丰富，整个项目进展非常迅速。
+                                    在接触到自动化平台时，颠覆了对运维的认知；受益于开源，知识面扩展丰富，整个项目进展非常迅速。
                                 </p>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    因现有文库系统负载较高，访问迟钝，无法满足正常办公，对此重构升级，我在此项目中负责环境部署。
+                                    因现有文库系统负载较高，访问迟钝，无法满足正常办公，对此重构升级；我在此项目中负责环境部署。
                                 </p>
                             </div>
                         </div>
