--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    搭建集团自动化平台，实现自动化部署广铁集团教育系统，提升工程效率，我在此项目中负责自动化平台搭建和教育系统环境部署。
+                                    搭建集团自动化平台，实现自动化部署广铁集团教育系统，提升工作效率。
                                 </p>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                             </header>
                             <div class="item-bd">
                                 <p class="section-content">
-                                    因现有文库系统负载较高，访问迟钝，无法满足正常办公，对此重构升级；我在此项目中负责环境部署。
+                                    因现有文库系统负载较高，访问迟钝，无法满足正常办公，对此重构升级。
                                 </p>
                             </div>
                         </div>
